# BridgeTTS

./: .gitattributes  .gitignore  Changelog.md  LICENSE  README.md  bridge_server_api.py  index.html  pyproject.toml  run-bridge-webui-api.bat  run-bridge-webui-api.sh  tts_config.json
.scratch/: changes_v3-api-version-detect.md
characters/: グッチちゃん.txt  テンプレちゃん.txt
prompts/: base_system_prompt.txt
